monitoria/mac323/4-2-33/grades/Victor-Matta_190874_assignsubmission_file_WordDAG.txt

..TT..TWWWWWWWWWWWWW.WTTTT
CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
5 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
7 | Tempo de Execução Excedido
14 | Resposta Errada
0 | Erro de Execução
Existem 26 testes, se a soma não der 26 quer dizer que houve alguma falha especial em algum teste que não foi identificada pelo corretor

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
WordDAG.java:3: error: cannot find symbol
    Digraph G;
    ^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:23: error: cannot find symbol
        G = new Digraph(strings.length);
                ^
  symbol:   class Digraph
  location: class WordDAG
2 errors
=========== TENTANDO COMPILAR DE NOVO (LevelTraversal.java -> WordDAG.java) =============
WordDAG.java:3: error: cannot find symbol
    Digraph G;
    ^
  symbol:   class Digraph
  location: class WordDAG
WordDAG.java:23: error: cannot find symbol
        G = new Digraph(strings.length);
                ^
  symbol:   class Digraph
  location: class WordDAG
2 errors
=========== TENTANDO COMPILAR DE NOVO (imports no começo do código) ==============
..TT

real	0m6.241s
user	0m9.312s
sys	0m0.056s
..T

real	0m3.241s
user	0m3.288s
sys	0m0.060s
RMMMM

real	0m3.615s
user	0m13.344s
sys	0m3.996s
RMMMMMMM

real	0m7.133s
user	0m32.040s
sys	0m3.724s
..TTTT

real	0m46.737s
user	1m5.168s
sys	0m0.468s
====== 000_case =========
ok 6 lines
OK
====== 001_case =========
ok single line: '2'
OK
====== 002_case =========
Tempo Excedido
====== 003_case =========
Tempo Excedido
====== 100_case =========
ok 10 lines
OK
====== 101_case =========
ok single line: '1'
OK
====== 102_case =========
Tempo Excedido
====== 200_case =========
wrong answer 1st lines differ - expected: 'a A', found: ''
Resposta Errada
====== 201_case =========
wrong answer 1st lines differ - expected: '1474', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 202_case =========
wrong answer 1st lines differ - expected: '235229', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 203_case =========
wrong answer 1st lines differ - expected: '84', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 204_case =========
wrong answer 1st lines differ - expected: '240', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 300_case =========
wrong answer 1st lines differ - expected: 'a A', found: ''
Resposta Errada
====== 301_case =========
wrong answer 1st lines differ - expected: '1', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 302_case =========
wrong answer 1st lines differ - expected: '6', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 303_case =========
wrong answer 1st lines differ - expected: '1964', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 304_case =========
wrong answer 1st lines differ - expected: '398394', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 305_case =========
wrong answer 1st lines differ - expected: '1398768', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 306_case =========
wrong answer 1st lines differ - expected: '923340550', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 307_case =========
wrong answer 1st lines differ - expected: '114495854014092500', found: 'FALHA NA MONTAGEM'
Resposta Errada
====== 400_case =========
ok 70173 lines
OK
====== 401_case =========
wrong answer 1st lines differ - expected: '803469022129495137770981046170581301261101496891396417650688', found: '0'
Resposta Errada
====== 402_case =========
Tempo Excedido
====== 403_case =========
Tempo Excedido
====== 404_case =========
Tempo Excedido
====== 405_case =========
Tempo Excedido
